[package]
name = "tract-cuda"
version = "0.23.0-pre"
license = "MIT OR Apache-2.0"
authors = [
	"Louis Chouraki <louis.chouraki@sonos.com>",
	"Mathieu Poumeyrol <kali@zoy.org>",
]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "CUDA" ]
categories = [ "science" ]
autobenches = false
edition = "2024"
rust-version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
derive-new.workspace = true
dyn-eq.workspace = true
dirs.workspace = true
downcast-rs.workspace = true
minijinja.workspace = true
num-traits.workspace = true
tract-core.workspace = true
tract-pulse-opl.workspace = true
tract-transformers.workspace = true
tract-gpu.workspace = true
log.workspace = true
cudarc.workspace = true
inventory.workspace = true
libloading.workspace = true


[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rand.workspace = true

[features]
# Pick exactly one cuda-XXXXX to bind cudarc against. Higher minor versions
# bind more symbols; the resulting binary still runs against any CUDA driver
# whose API version is >= the chosen one (the runtime check in utils.rs
# enforces this).
cuda-12000 = ["cudarc/cuda-12000"]
cuda-12010 = ["cudarc/cuda-12010"]
cuda-12020 = ["cudarc/cuda-12020"]
cuda-12030 = ["cudarc/cuda-12030"]
cuda-12040 = ["cudarc/cuda-12040"]
cuda-12050 = ["cudarc/cuda-12050"]
cuda-12060 = ["cudarc/cuda-12060"]
cuda-12080 = ["cudarc/cuda-12080"]
cuda-12090 = ["cudarc/cuda-12090"]
cuda-13000 = ["cudarc/cuda-13000"]
cuda-13010 = ["cudarc/cuda-13010"]
cuda-13020 = ["cudarc/cuda-13020"]
default = ["cuda-13000"]

[[bench]]
name = "cuda_flash"
harness = false
