[package]
name = "tract-data"
version = "0.17.4-pre"
license = "MIT/Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.43"
educe = "0.4.18"
half = { version="2", features = [ "std", "num-traits" ] }
itertools = "0.10.1"
maplit = "1.0.2"
ndarray = "0.15.3"
num-complex = "0.4.0"
num-integer = "0.1.44"
num-traits = "0.2.14"
smallvec = "1.6.1"
lazy_static = "1.4.0"
scan_fmt = "0.2.6"

[dev-dependencies]
criterion = "0.3.5"
proptest = "1.0.0"

[[bench]]
name = "tensor_from_datum"
harness = false

[[bench]]
name = "stack_tensors"
harness = false
