[package]
name = "tract-data"
version = "0.20.23-pre"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.65"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
half.workspace = true
itertools.workspace = true
maplit.workspace = true
ndarray.workspace = true
nom.workspace = true
num-complex = { workspace = true, optional = true }
num-integer.workspace = true
num-traits.workspace = true
smallvec.workspace = true
lazy_static.workspace = true
scan_fmt.workspace = true
string-interner.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[features]
complex = [ "num-complex" ]

[[bench]]
name = "tensor_from_datum"
harness = false

[[bench]]
name = "stack_tensors"
harness = false
