[package]
name = "tract-data"
version = "0.21.13"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.75"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
downcast-rs.workspace = true
dyn-clone.workspace = true
dyn-hash.workspace = true
half.workspace = true
itertools.workspace = true
libm.workspace = true
maplit.workspace = true
ndarray.workspace = true
nom.workspace = true
num-complex = { workspace = true, optional = true }
num-integer.workspace = true
num-traits.workspace = true
smallvec.workspace = true
lazy_static.workspace = true
scan_fmt.workspace = true
string-interner.workspace = true
parking_lot = "0.12.3"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[target.'cfg(target_family = "wasm")'.dev-dependencies]
# Wasm doesn't support the `rayon` feature of criterion
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }
# Wasm doesn't support the `fork` feature of proptest.
proptest = { version = "1.0.0", default-features = false, features = ["std", "bit-set"] }

[features]
complex = [ "num-complex" ]

[[bench]]
name = "tensor_from_datum"
harness = false

[[bench]]
name = "stack_tensors"
harness = false
