[package]
name = "tract-ffi"
version = "0.19.0-pre"
license = "MIT/Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"

[lib]
name = "tract"
crate-type = ["cdylib"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
tract-data = { path = "../data", version = "0.19.0-pre" }
tract-nnef = { path = "../nnef", version = "0.19.0-pre" }
tract-onnx = { path = "../onnx", version = "0.19.0-pre" }
tract-tensorflow = { path = "../tensorflow", version = "0.19.0-pre" }
