[package]
name = "tract-ffi"
version = "0.20.7-pre"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
include = [ "Cargo.toml", "src/**/*.rs", "LICENSE*" ]

[lib]
name = "tract"
crate-type = ["cdylib"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
tract-data = { path = "../data", version = "=0.20.7-pre" }
tract-nnef = { path = "../nnef", version = "=0.20.7-pre" }
tract-onnx = { path = "../onnx", version = "=0.20.7-pre" }
tract-pulse = { path = "../pulse", version = "=0.20.7-pre" }
tract-tensorflow = { path = "../tensorflow", version = "=0.20.7-pre" }
tract-libcli = { path = "../libcli", version = "=0.20.7-pre" }
