[package]
name = "tract-gpu"
version = "0.21.13"
license = "MIT OR Apache-2.0"
authors = [
	"Hubert de La Jonquiere <hubert.delajonquiere@sonos.com>",
	"Mathieu Poumeyrol <kali@zoy.org>",
	"Louis Chouraki <louis.chouraki@sonos.com>",
]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "GPU" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.75"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
derive-new.workspace = true
downcast-rs.workspace = true
num-traits.workspace = true
tract-core.workspace = true
