[package]
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
autobenches = false
categories = ["science"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
edition = "2018"
keywords = [
    "TensorFlow",
    "NeuralNetworks",
]
license = "MIT/Apache-2.0"
name = "tract-hir"
repository = "https://github.com/snipsco/tract"
version = "0.12.3"

[badges.maintenance]
status = "actively-developed"

[dependencies]
derive-new = "0.5"
educe = "=0.4.11"
log = "0.4"
tract-core = "0.12.3"
tract-pulse = "0.12.3"

[dev-dependencies]
env_logger = "0.7"
