[package]
name = "tract-hir"
version = "0.17.4-pre"
license = "MIT/Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
derive-new = "0.5.9"
educe = "0.4.18"
log = "0.4.14"
tract-core = { version = "0.17.4-pre", path = "../core" }

[dev-dependencies]
env_logger = "0.9.0"
