[package]
name = "tract-kaldi"
version = "0.19.7-pre"
authors = [
    "Mathieu Poumeyrol <kali@zoy.org>",
    "Theodore Bluche <theodore.bluche@snips.ai>"
]
license = "MIT/Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "ONNX" ]
categories = [ "science" ]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bit-set= "0.5.2"
derive-new.workspace = true
educe.workspace = true
lazy_static.workspace = true
log.workspace = true
maplit.workspace = true
nom.workspace = true
tract-hir = { version = "=0.19.7-pre", path = "../hir" }
tract-pulse = { version = "=0.19.7-pre", path = "../pulse" }
