[package]
name = "tract-libcli"
version = "0.21.7"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
box_drawing.workspace = true
colorous.workspace = true
lazy_static.workspace = true
log.workspace = true
ndarray-npy.workspace = true
nu-ansi-term.workspace = true
py_literal.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tract-core = { version = "=0.21.7", path = "../core" }
tract-hir = { version = "=0.21.7", path = "../hir" }
tract-onnx = { version = "=0.21.7", path = "../onnx", optional = true }
tract-tflite = { version = "=0.21.7", path = "../tflite", optional = true }

[features]
# hir = ["tract-hir"]
hir = []
onnx = [ "tract-onnx" ]
complex = [ "tract-core/complex" ]

