[package]
name = "tract-metal"
version = "0.21.13"
license = "MIT OR Apache-2.0"
authors = [
	"Hubert de La Jonquière <hubert.delajonquiere@sonos.com>",
	"Mathieu Poumeyrol <kali@zoy.org>",
]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "Metal" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.75"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
derive-new.workspace = true
downcast-rs.workspace = true
log.workspace = true
metal.workspace = true
objc = { version = "0.2.7" }
num-traits.workspace = true
tract-core.workspace = true
tract-transformers.workspace = true
tract-gpu.workspace = true

[features]
default = [ ]

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rand.workspace = true
ggml = { git = "https://github.com/rustformers/llm.git", rev="9376078", features = ["metal"] }

[[bench]]
name = "metal_gemm"
harness = false

