[package]
name = "tract-nnef"
version = "0.23.0-dev.5"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT OR Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "NeuralNetworks", "NNEF" ]
categories = [ "science" ]
autobenches = false
edition = "2024"
rust-version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
byteorder.workspace = true
minijinja.workspace = true
log.workspace = true
nom.workspace = true
nom-language.workspace = true
safetensors.workspace = true
serde_json.workspace = true
tar.workspace = true
flate2 = { workspace = true, optional = true }
simd-adler32.workspace = true
walkdir.workspace = true
erased-serde.workspace = true
serde.workspace = true
tract-core.workspace = true

[dev-dependencies]
temp-dir = "0.2.0"
serde_json.workspace = true

[features]
default = ["flate2"]
complex = [ "tract-core/complex" ]
