[package]
name = "tract-onnx-opl"
version = "0.18.4-pre"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT/Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "ONNX" ]
categories = [ "science" ]
autobenches = false
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tract-nnef = { version = "0.18.4-pre", path = "../nnef" }
educe.workspace = true
log.workspace = true
rand.workspace = true
getrandom.workspace = true

[dev-dependencies]
env_logger.workspace = true

[features]
default = []
getrandom-js = ["getrandom/js"]
