[package]
name = "tract-onnx-opl"
version = "0.18.6-pre"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT/Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "ONNX" ]
categories = [ "science" ]
autobenches = false
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tract-nnef = { version = "0.18.6-pre", path = "../nnef" }
educe = "0.4.18"
log = "0.4.14"
rand = { version = "0.8.4", features = ["small_rng"] }
getrandom = "0.2"

[dev-dependencies]
env_logger = "0.9.0"

[features]
default = []
getrandom-js = ["getrandom/js"]
