[package]
name = "tract-onnx-opl"
version = "0.21.13"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT OR Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "ONNX" ]
categories = [ "science" ]
autobenches = false
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
getrandom.workspace = true
log.workspace = true
rand.workspace = true
rand_distr.workspace = true
rustfft.workspace = true
tract-nnef.workspace = true

[dev-dependencies]
env_logger.workspace = true

[features]
default = []
getrandom-js = ["getrandom/js"]
