[package]
name = "tract-pulse-opl"
version = "0.17.4-pre"
license = "MIT/Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
downcast-rs = "1.2.0"
lazy_static = "1.4.0"
tract-nnef = { version = "0.17.4-pre", path = "../nnef" }
