[package]
name = "tract-pulse-opl"
version = "0.21.13"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
downcast-rs.workspace = true
lazy_static.workspace = true
tract-nnef.workspace = true

[features]
complex = [ "tract-nnef/complex" ]
