[package]
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
autobenches = false
categories = ["science"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
edition = "2018"
keywords = [
    "TensorFlow",
    "NeuralNetworks",
]
license = "MIT/Apache-2.0"
name = "tract-pulse"
repository = "https://github.com/snipsco/tract"
version = "0.12.3"

[badges.maintenance]
status = "actively-developed"

[dependencies]
downcast-rs = "1.0"
inventory = "0.1"
lazy_static = "1.4.0"
tract-pulse-opl = "0.12.3"
