[package]
name = "tract-pulse"
version = "0.15.1"
license = "MIT/Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
downcast-rs = "1.0"
lazy_static = "1.4.0"
tract-pulse-opl = "=0.15.1"
