[package]
name = "tract-tensorflow"
version = "0.17.5-pre"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT/Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "ONNX" ]
categories = [ "science" ]
autobenches = false
edition = "2018"
# build = "build-proto.rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bytes = "1.0.1"
derive-new = "0.5.9"
educe = "0.4.18"
log = "0.4.14"
prost = "0.11.0"
prost-types = "0.11.0"
tensorflow = { version = "0.17.0", optional = true }
tract-hir = { version = "0.17.5-pre", path = "../hir" }
tract-pulse = { version = "0.17.5-pre", path = "../pulse" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mapr = "0.8.0"

# [build-dependencies]
# protobuf-src = "1.0.5+3.19.3"
# prost-build = "0.11.1"

[features]
conform = [ "tensorflow" ]

[dev-dependencies]
criterion = "0.3.5"
env_logger = "0.9.0"
proptest = "1.0.0"
rand = "0.8.4"

# [[bench]]
# name = "conv"
# harness = false
