[package]
name = "tract-tensorflow"
version = "0.21.13"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT OR Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "ONNX" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.75"
# build = "build-proto.rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bytes.workspace = true
derive-new.workspace = true
log.workspace = true
memmap2.workspace = true
prost.workspace = true
prost-types.workspace = true
tensorflow = { workspace = true, optional = true }
tract-hir.workspace = true
tract-pulse.workspace = true

# [build-dependencies]
# protobuf-src = "1.0.5+3.19.3"
# prost-build = "0.11.1"

[features]
conform = [ "tensorflow" ]

[dev-dependencies]
criterion.workspace = true
env_logger.workspace = true
proptest.workspace = true
rand.workspace = true

# [[bench]]
# name = "conv"
# harness = false
