[package]
name = "tfdeploy-onnx"
version = "0.1.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]

[dependencies]
derive-new = "0.5"
error-chain =  { version = "0.12", default-features=false }
log = "0.4"
ndarray = { version = "0.12" }
num = "0.2"
protobuf = "2.0"
tfdeploy = { path=".." }

[dev-dependencies]
colored = "1.6"
git2 = "0.7"
tempdir = "0.3"

[[test]]
name = "onnx_backend_ref"
harness = false
