[package]
name = "tfdeploy-onnx"
version = "0.1.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]

[dependencies]
derive-new = "0.5"
error-chain =  { version = "0.12", default-features=false }
log = "0.4"
ndarray = { version = "0.12" }
num = "0.2"
protobuf = "2.0"
tfdeploy = { path=".." }

[dev-dependencies]
colored = "1.6"
flate2 = "1"
fs2 = "0.4"
git2 = "0.7"
mio_httpc = { version = "0.6", features = ["rtls"] }
rayon = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
tar = "0.4"
tempdir = "0.3"
