[package]
name = "tract-tflite"
version = "0.20.7-pre"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT OR Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
edition = "2021"

[dependencies]
flatbuffers = {version="23.1.21"}
tract-hir = { version = "=0.20.7-pre", path = "../hir" }
