[package]
name = "tract-transformers"
version = "0.21.13"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>", "Louis Chouraki <louis.chouraki@sonos.com>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "Transformers" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.75"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tract-nnef.workspace = true
