[package]
name = "tract-transformers"
version = "0.22.1-pre"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>", "Louis Chouraki <louis.chouraki@sonos.com>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "Transformers" ]
categories = [ "science" ]
autobenches = false
edition = "2024"
rust-version = "1.85"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
float-ord.workspace = true
tract-nnef.workspace = true
