[package]
name = "tract-transformers"
version = "0.23.3-pre"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>", "Louis Chouraki <louis.chouraki@sonos.com>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "Transformers" ]
categories = [ "science" ]
autobenches = false
edition = "2024"
rust-version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
float-ord.workspace = true
tract-nnef.workspace = true

# Used to spread FlashSDPA's independent attention heads across cores (rayon's
# global pool). Not available on wasm32-unknown-unknown (no thread spawn), where
# the op stays single-threaded.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rayon.workspace = true
